<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FFF</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_edit_event">EditEvent</string>
    <string name="message">We have just found a free food posibility!</string>
    <string name="date_label">on:</string>
    <string name="loc_label">in:</string>
    <string name="Details">Details:</string>
    <string name="yes_add">Yes! Add to calendar</string>
    <string name="No_forget">No! Forget it</string>
    <string name="from_label">From:</string>
    <string name="title_activity_notif_list">Free Food Finder</string>
    <string name="title_activity_list_item">ListItemActivity</string>
    <string name="activity_notif_list">All Free Food Possibilities</string>
    <string name="Register">Register</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="Welcome">Free Food Finder</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="Server_name_label">Server:</string>
    <string name="Server_text">Enter your mail server here</string>
    <string name="username_label">Username:</string>
    <string name="username_text">Enter your username here</string>
    <string name="password_label">Password:</string>
    <string name="password_text">Enter your password here</string>
    <string name="find_button">Find Free Food</string>

</resources>