<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme"
    tools:context="${relativePackage}.${activityClass}" >



<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/theme">

    <TextView
        android:id="@+id/server_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Server_name_label"
        android:layout_marginTop="61dp"
        android:layout_marginLeft="20dp"
        android:textAppearance="@style/GreenText"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/server_name"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:ems="10"
        android:hint="@string/Server_text" />

    <TextView
        android:id="@+id/username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/username_label"
        android:textAppearance="@style/GreenText"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:ems="10"
        android:hint="@string/username_text" >
		<requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/password_label"
        android:textAppearance="@style/GreenText"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_text"  >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/findButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="20dp"
        android:text="@string/find_button" />
    </LinearLayout>

</RelativeLayout>